src/css/vocabulary.css
/* ... */
.team-index main .persons .person p {
    font-size: .75em;
}

.team-index main aside.closing {
    background: none;
}

.team-index main aside.closing p {
    font-style: italic;
}

/* person-page context */

.person-page main > header {
    grid-column: 2 / span 9;
    min-height: 410px;
    position: relative;
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 3fr 7fr;
    /* grid-template-areas:
    'picture info'
    'picture info'
    'picture info'; */
    gap: 0 5em;
    padding: 3.7em 0;

    text-align: left;
}


.person-page main > header:before {
    left: -5.5%;
}

.person-page main > header h1 {
    grid-column-start: 2;
    margin-bottom: .1em;
}

.person-page main > header .title {
    grid-column-start: 2;
    margin-bottom: 1em;

    font-family: 'Source Sans Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 1.9em;
}

.person-page main > header .pronouns {
    grid-column-start: 2;
    margin-bottom: 1em;

    font-family: 'Source Sans Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 1.5em;
}

.person-page main > header figure {
    box-sizing: border-box;
    position: absolute;
    margin: 0;
    padding:0;
    top: 3.4em;
    left: 0;
    width: 30%;
}

.person-page main > header figure img {
    box-sizing: border-box;
    width: 100%;
    max-height: 21.8rem;

    border: 16px solid white;
}

.person-page main > header .bio {
    grid-column-start: 2;

    font-size: .9em;
}

.person-page main > header p {
    margin-bottom: .3em;
}

/* program-index context */

.program-index main > article.projects {
    grid-column: 3 / 10;
    margin-bottom: 8em;
}

.program-index main > article.projects ul {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2em;
    margin: 0;
    padding: 0;

    font-size: 1em;
    list-style: none;
}

.program-index main > article.projects article {
    padding: 2em;

    background: var(--vocabulary-brand-color-soft-turquoise);
    border-top: 3px solid black;
}

.program-index main > article.projects article a {
    --underline-background-color: var(--vocabulary-brand-color-soft-turquoise);
}

/* program-page context */


/* responsive contexts */

@media (min-width: 1500px) {
    body {
        width: 1500px;
        margin: 0 auto;
    }

    body > main {
        overflow-x: hidden;
    }

}

@media (max-width: 1140px) {
    .blog-index main footer .attribution-list ul.expand {
        grid-template-columns: 1fr 1fr;
    }

    .search-index main > header {
        grid-column: 3 / 10;
    }

    .search-index main > header:before {
        left: -9.3%;
    }
}

@media (max-width: 900px) {

    .blog-index main .posts ul {
        display: flex;
        flex-wrap: wrap;
    }
}

@media (max-width: 705px) {

    body > header .masthead {
        padding-top: 60px;
        display: block;
    }

    body > header button.expand-menu {
        position: absolute;
        top: 4.5em;
        right: 0;
        display: inline-block;
        padding: .5rem 1rem;
        border: none;
        border-radius: 5px;
        background: #F5F5F5;
        text-transform: uppercase;
        font-family: 'Roboto Condensed';
        font-style: normal;
        font-weight: 700;
        font-size: 1em;
    }

    body > header .primary-menu {
        display: none;

    }

    body > header .primary-menu.expand {
        display: initial;
    }

    body > header .primary-menu.expand ul {
        display: block;
        width: 100%;
        margin: 0;
        padding: 0;
        margin-top: 1.5em;
    }

    body > header .primary-menu.expand ul li {
        margin: 0;
        padding: 1em 0;

        border-top: 1px solid rgba(1,1,1,.1);
    }

    main {
        width: 80%;
    }

    main article.posts.related {
        width: 100%;
        margin-left: 0;
    }

    main article.posts.related {
        display: block;
    }

    .blog-index main article.posts.featured > ul li:nth-child(1) {
        padding: 2em;
    }

    .blog-index main .posts {
        padding: 0 5%;
    }

    .blog-index main footer .attribution-list ul.expand {
        display: block;
    }

    .search-index .search-form form button {
        width: 20%;
    }

}

@media (max-width: 680px) {

    body > header .explore-panel {
        flex-wrap: wrap;
    }

    body > footer {
        display: block;
    }

    body > footer > nav {
        margin-top: 1em;
        margin-bottom: 3em;
    }

    body > footer > nav ul li {
        margin-bottom: 1em;
    }

    body > footer > div {
        margin-bottom: 4em;
    }

    main {
        display: block;
        width: 100%;
    }

    main > aside .attention {
        margin-bottom: 5em;
    }

    main > header:before {
        left: 0;
    }

    .posts article figure {
        width: 100%;
        flex: initial;
    }

    .team-index main > header {
        padding: 0 5%;
    }

    .team-index main article.persons {
        padding: 0 5%;
    }

    .team-index main article.persons ul {
        grid-template-columns: 1fr 1fr;
    }

    .person-page main > header {
        display: flex;
    }

    .person-page main > header figure {
        width: auto;
        margin-bottom: 3em;
        position: relative;

        order: -1;
    }

    main nav.pagination {
        width: 100%;
    }

    main nav.pagination ol {
        /* width: 100%; */
        flex-wrap: wrap;
    }

    main nav.pagination ol li {
        line-height: 250%;
    }
}

@media (max-width: 580px) {
    body > header .explore-panel .explore-menu ul {
        grid-template-columns: 1fr 1fr;
    }

    body > footer .footer-menu ul {
        display: block;
    }
}

@media (max-width: 425px) {

    .blog-index .attribution-list {
      padding: 2em;
    }

    .blog-index .attribution-list h2 {
      width: 50%;

      hyphens: auto;
      word-break: break-word;
    }

  }
/* ... */

